# MLOps_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  ci_cd.yml  monitoring.yml  train.yml  train_upload_model.yml
data/: predictions.csv  train.csv
metrics/: model_results.csv
src/: config.py  evaluate_model.py  model.py  monitoring.py  train.py
src/api/: main.py
src/mlops_project.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_model.py
