[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'mlops_project'
version = '0.1.0'
requires-python = '>=3.8'
dependencies = [
    'accelerate>=0.26.0',
    'datasets',
    'evaluate',
    'pytest',
    'sklearn',
    'torch',
    'transformers',
]

[tool.setuptools.packages.find]
where = ['.']
include = ['src']
